exports[`Reducers AccountListReducer should handle ADD_ACCOUNT 1`] = `
Array [
  Object {
    "test": "test",
  },
]
`;

exports[`Reducers AccountListReducer should handle CANCEL_EDIT with empty new account 1`] = `Array []`;

exports[`Reducers AccountListReducer should handle CANCEL_EDIT with existing account 1`] = `
Array [
  Object {
    "domain": "example.com",
    "edit": false,
    "fakeID": "fakeID",
    "id": 0,
    "username": "ttester",
  },
]
`;

exports[`Reducers AccountListReducer should handle DELETE_ACCOUNT 1`] = `Array []`;

exports[`Reducers AccountListReducer should handle EDIT_ACCOUNT 1`] = `
Array [
  Object {
    "domain": "example.com",
    "edit": true,
    "fakeID": "fakeID",
    "id": 0,
    "username": "dudeDudsen",
  },
]
`;

exports[`Reducers AccountListReducer should handle FETCH_ACCOUNTS_SUCCESS 1`] = `Array []`;

exports[`Reducers AccountListReducer should handle SAVE_ACCOUNT 1`] = `
Array [
  Object {
    "domain": "example.com",
    "edit": false,
    "fakeID": "fakeID",
    "id": 0,
    "new": false,
    "username": "dudeDudsen",
  },
]
`;

exports[`Reducers EditAccountListReducer should handle ADD_ACCOUNT 1`] = `
Object {
  "fakeID": Object {
    "fakeID": "fakeID",
    "test": "test",
  },
}
`;

exports[`Reducers EditAccountListReducer should handle CANCEL_EDIT 1`] = `Object {}`;

exports[`Reducers EditAccountListReducer should handle CHANGE_ACCOUNT 1`] = `
Object {
  "fakeID": Object {
    "domain": "example.com",
    "fakeID": "fakeID",
    "username": "dudeDudsen",
  },
}
`;

exports[`Reducers EditAccountListReducer should handle EDIT_ACCOUNT 1`] = `
Object {
  "fakeID": Object {
    "fakeID": "fakeID",
    "test": "test",
  },
}
`;

exports[`Reducers EditAccountListReducer should handle SAVE_ACCOUNT 1`] = `Object {}`;

exports[`Reducers EditAccountListReducer should return unmodified state as default 1`] = `Object {}`;
